--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -33,6 +33,7 @@
     "#@title Dibujo enviado por Teo {display-mode:\"form\"}\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
+    "dibujar()\n",
     "\n",
     "velocidad(13)\n",
     "ancho_linea(2)\n",
@@ -88,6 +89,7 @@
     "#@title Dibujo enviado por Flor {display-mode:\"form\"}\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
+    "dibujar()\n",
     "\n",
     "import math\n",
     "\n",
@@ -124,6 +126,7 @@
     "#@title Dibujo enviado por Hernan {display-mode:\"form\"}\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
+    "dibujar()\n",
     "\n",
     "velocidad(13)\n",
     "ancho_linea(2)\n",
