--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "En este curso nuestro trabajo sera darle instrucciones a una tortuga para que haga los dibujos que nosotros querramos.\n",
     "\n",
-    "Utilizaremos la palabra `adelante` para que la tortuga vaya hacia adelante y entre parentesis pondremos cuantos centimetros queremos que vaya hacia adelante, por ejemplo: `adelante(100)`"
+    "Utilizaremos la palabra `adelante` para que la tortuga vaya hacia adelante y entre parentesis pondremos cuantos pixeles queremos que vaya hacia adelante, por ejemplo: `adelante(100)`"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "id": "ojqV4CccQdW6"
    },
    "source": [
-    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 centimetros de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
+    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 pixeles de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "source": [
     "### Ejercicio 1:\n",
     "\n",
-    "Dibuja un cuadrado con sus lados de 200 centimetros"
+    "Dibuja un cuadrado con sus lados de 200 pixeles"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "### Ejercicio 2:\n",
     "\n",
-    "Dibuja un cuadrado con sus lados de 100 metros y de cuatro colores diferentes: verde, azul, rojo y naranja"
+    "Dibuja un cuadrado con sus lados de 100 pixeles y de cuatro colores diferentes: verde, azul, rojo y naranja"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "source": [
     "### Ejercicio 3:\n",
     "\n",
-    "Dibujar un espiral como el que se ve a continuacion. Ayuda empezar con lados de 10 centimetros e ir aumentando de 10 en 10 hasta llegar a lados de 100 centimetros.\n",
+    "Dibujar un espiral como el que se ve a continuacion. Ayuda empezar con lados de 10 pixeles e ir aumentando de 10 en 10 hasta llegar a lados de 100 pixeles.\n",
     "\n",
     "![espiral](./img/espiral.png)"
    ]
@@ -428,7 +428,7 @@
    "source": [
     "Asi como tenemos las instrucciones `adelante` y `derecha` tambien tenemos las instrucciones `atras` e `izquierda`.\n",
     "\n",
-    "Utilizaremos la palabra `atras` para que la tortuga vaya hacia atras y entre parentesis pondremos cuantos centimetros queremos que vaya hacia atras, por ejemplo: `atras(100)`\n",
+    "Utilizaremos la palabra `atras` para que la tortuga vaya hacia atras y entre parentesis pondremos cuantos pixeles queremos que vaya hacia atras, por ejemplo: `atras(100)`\n",
     "\n",
     "Utilizaremos la palabra `izquierda` para que la tortuga doble hacia la izquierda y entre parentesis pondremos el angulo que queremos que gire, por ejemplo: `izquierda(90)`\n",
     "\n",
@@ -571,7 +571,7 @@
    "source": [
     "### Ejercicio 5:\n",
     "\n",
-    "Dibuja un cubo con sus lados de 100 metros"
+    "Dibuja un cubo con sus lados de 100 pixeles"
    ]
   },
   {
