--- a/cursos/espanol/programacion_basico/4_mas_patrones.ipynb
+++ b/cursos/espanol/programacion_basico/4_mas_patrones.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mas Instrucciones"
+    "# Mas Patrones"
    ]
   },
   {
@@ -34,51 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resumen de todas las instrucciones que entiende la Tortuga\n",
-    "\n",
-    "- `borrar_todo()` -> Borra todo lo que haya dibujado la tortuga.\n",
-    "- `adelante(unidades)` -> Mueve la tortuga en la direccion que esta mirando .\n",
-    "- `atras(unidades)` -> Mueve la tortuga en la direccion opuesta que esta mirando.\n",
-    "- `derecha(grados)` -> Gira la tortuga hacia la derecha la cantidad de grados.\n",
-    "- `izquierda(grados)` -> Gira la tortuga hacia la izquierda la cantidad de grados.\n",
-    "- `no_dibujar()` -> La tortuga se movera sin dibujar luego de esta instruccion.\n",
-    "- `dibujar()` -> La tortuga volvera a dibujar si no lo estaba haciendo.\n",
-    "- `velocidad(s)` -> Define la velocidad de la tortuga. Debe ser un numero de 1 (mas lento) a 13 (mas rapido).\n",
-    "- `mover_a_x(x)` -> Mueve la tortuga a una posicion en x, y queda igual.\n",
-    "- `mover_a_y(y)` -> Mueve la tortuga a una posicion en y, x queda igual.\n",
-    "- `ir_a_xy(x,y)` Mueve la tortuga a una posicion definida por x e y\n",
-    "- `ir_a_casa()` -> Mueve la tortuga al centro y mirando al norte.\n",
-    "- `direccion(grados)` -> Gira la tortuga a un angulo definido por grados, donde 0 es hacia arriba.\n",
-    "- `xcor()` -> Devuelve la coordenada x de la tortuga.\n",
-    "- `ycor()` -> Devuelve la coordenada y de la tortuga.\n",
-    "- `posicion()` -> Devuelve las coordinadas x,y de la tortuga.\n",
-    "- `obtener_direccion()` -> Devuelve hacia donde esta apuntando la tortuga en grados, donde 0 es hacia el norte.\n",
-    "- `mostrar_tortuga()` -> Muestra la tortuga si estaba oculta.\n",
-    "- `ocultar_tortuga()` -> Oculta la tortuga.\n",
-    "- `es_visible()` -> Devulve True si la tortuga es visible o False si no.\n",
-    "- `color_de_fondo(color_elegido)` -> Cambia el color de fondo.\n",
-    "- `color_de_fondo(r,g,b)` -> Cambia el color de fondo.\n",
-    "- `color(color_elegido)` -> Cambia el color con el que la tortuga dibuja.\n",
-    "- `color(r,g,b)` -> Cambia el color con el que la tortuga dibuja.\n",
-    "- `ancho_linea(w)` -> Cambia el gosor de la linea del dibujo.\n",
-    "- `distancia(x,y)` -> Devuelve la distancia de la tortuga a la posicion x,y.\n",
-    "- `ancho_de_la_ventana()` -> Devuelve el ancho de la ventana donde dibuja la tortuga.\n",
-    "- `alto_de_la_ventana()` -> Devuelve el alto de la ventana donde dibuja la tortuga."
+    "## Veamos ahora otros patrones que podemos usar"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Probemos ahora algunas de ellas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
