--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,6 +26,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0c942790-592a-48f0-97c5-9f539d82af6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Brian {display-mode:\"form\"}\n",
+    "largo = 10\n",
+    "\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "velocidad(6)\n",
+    "color(\"white\")\n",
+    "\n",
+    "adelante(largo)\n",
+    "derecha(90)\n",
+    "adelante(largo)\n",
+    "derecha(90)\n",
+    "adelante(largo * 2)\n",
+    "derecha(90)\n",
+    "adelante(largo * 2)\n",
+    "derecha(90)\n",
+    "adelante(largo * 3)\n",
+    "derecha(90)\n",
+    "adelante(largo * 3)\n",
+    "derecha(90)\n",
+    "adelante(largo * 4)\n",
+    "derecha(90)\n",
+    "adelante(largo * 4)\n",
+    "derecha(90)\n",
+    "adelante(largo * 5)\n",
+    "derecha(90)\n",
+    "adelante(largo * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c2b48867-65d6-4914-985b-e7661c05fafa",
    "metadata": {},
    "outputs": [],
