--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -276,14 +276,29 @@
     "from pandas.api.types import is_numeric_dtype\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "for c in df.columns:\n",
-    "  print(c, is_numeric_dtype(df[c]), df[c].isna().sum())\n",
-    "  if is_numeric_dtype(df[c]):\n",
-    "    df[c].fillna(df[c].mean(), inplace=True)\n",
-    "    df[c] = scaler.fit_transform(df[[c]])\n",
-    "  else:\n",
-    "    df[c].fillna(df[c].mode(), inplace=True)\n",
-    "    df = pd.get_dummies(df, columns=[c])"
+    "def data_processing(df, target_col=\"target\"):\n",
+    "    # TODO: save data processing to replicate on test\n",
+    "    # Remove ID columns\n",
+    "    for c in df.columns:\n",
+    "        if not is_float_dtype(df[c]):\n",
+    "            if df[c].nunique() == len(df[c]):\n",
+    "                df = df.drop(c, axis=1)\n",
+    "    \n",
+    "    # Fill Missing Values and Scale\n",
+    "    scaler = StandardScaler()\n",
+    "    for c in df.columns:\n",
+    "        if c != target_col:\n",
+    "            if is_numeric_dtype(df[c]):\n",
+    "                df[c] = df[c].fillna(df[c].mean())\n",
+    "                df[c] = scaler.fit_transform(df[[c]])\n",
+    "            else:\n",
+    "                df[c] = df[c].fillna(df[c].mode())\n",
+    "                df = pd.get_dummies(df, columns=[c], drop_first=True, dtype=int)\n",
+    "\n",
+    "    # Identify the target column\n",
+    "    X_train = df.loc[:, df.columns != target_col]\n",
+    "    y_train = df.loc[:, target_col]\n",
+    "    return X_train, y_train"
    ]
   },
   {
