--- a/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1_graficos_seaborn.ipynb
@@ -127,7 +127,7 @@
     "tags": []
    },
    "source": [
-    "### Variables numericas, discretas o continuas"
+    "### Variables numericas: discretas o continuas"
    ]
   },
   {
