--- a/cursos/espanol/programacion_basico/4_mas_patrones.ipynb
+++ b/cursos/espanol/programacion_basico/4_mas_patrones.ipynb
@@ -38,21 +38,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Los poligonos regulares como el triangulo y el cuadrado son figuras geometricas que tienen todos sus lados y angulos iguales como vemos en la siguiente figura:\n",
+    "\n",
+    "![poligonos](./img/angulos_poligonos.png)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 1: \n",
-    "\n",
-    "Recordemos las instrucciones para dibujar una escalera.\n",
-    "\n",
-    "Intenta resolverlo ahora encontrando el patron que se repite y usando la instruccion for:"
+    "Para dibujarlos haremos que la tortuga dibuje un lado y luego gire el angulo correspondiente al poligono, si por ejemplo queremos dibujar un triangulo al tortuga debera girar 120 grados. Luego repetiremos este procedimiento hasta que la tortuga llegue al lugar de inicio. Para ello utilizaremos la instruccion `while`"
    ]
   },
   {
@@ -61,7 +59,258 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modifica las instrucciones a continuacion\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(10)\n",
+    "\n",
+    "angulo_externo = 90\n",
+    "largo_lados = angulo_externo\n",
+    "xy_inicial = (xcor(), ycor())\n",
+    "\n",
+    "adelante(largo_lados)\n",
+    "derecha(angulo_externo)\n",
+    "while xy_inicial != (xcor(),ycor()):\n",
+    "    adelante(largo_lados)\n",
+    "    derecha(angulo_externo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Cambiar el angulo para crear diferentes poligonos, por ejemplo un hexagono"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modifica el siguiente codigo\n",
+    "\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(10)\n",
+    "\n",
+    "angulo_externo = 90\n",
+    "largo_lados = angulo_externo\n",
+    "xy_inicial = (xcor(), ycor())\n",
+    "\n",
+    "adelante(largo_lados)\n",
+    "derecha(angulo_externo)\n",
+    "while xy_inicial != (xcor(),ycor()):\n",
+    "    adelante(largo_lados)\n",
+    "    derecha(angulo_externo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(10)\n",
+    "\n",
+    "angulo_externo = 60\n",
+    "largo_lados = angulo_externo\n",
+    "xy_inicial = (xcor(), ycor())\n",
+    "\n",
+    "adelante(largo_lados)\n",
+    "derecha(angulo_externo)\n",
+    "while xy_inicial != (xcor(),ycor()):\n",
+    "    adelante(largo_lados)\n",
+    "    derecha(angulo_externo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Crear nuestras propias instrucciones\n",
+    "\n",
+    "Si ponemos el codigo anterior dentro de una definicion (`def`) entonces podemos crear nuestra propia instruccion. Veamos como crear nuestra propia instruccion para crear hexagonos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hexagono():\n",
+    "    angulo_externo = 60\n",
+    "    largo_lados = angulo_externo\n",
+    "    xy_inicial = (xcor(), ycor())\n",
+    "\n",
+    "    adelante(largo_lados)\n",
+    "    derecha(angulo_externo)\n",
+    "    while xy_inicial != (xcor(),ycor()):\n",
+    "        adelante(largo_lados)\n",
+    "        derecha(angulo_externo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego de ejecutar el codigo anterior ahora podemos usar nuestra nueva instruccion:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(13)\n",
+    "\n",
+    "hexagono()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combinemosla con un `for` para crear varios hexagonos seguidos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(13)\n",
+    "\n",
+    "for x in range(5):\n",
+    "    hexagono()\n",
+    "    adelante(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2: \n",
+    "\n",
+    "Usar el patron de los poligonos para generar un circulo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "velocidad(13)\n",
+    "\n",
+    "def circulo():\n",
+    "    angulo_externo = 10\n",
+    "    largo_lados = angulo_externo\n",
+    "    xy_inicial = (xcor(), ycor())\n",
+    "\n",
+    "    adelante(largo_lados)\n",
+    "    derecha(angulo_externo)\n",
+    "    while xy_inicial != (xcor(),ycor()):\n",
+    "        adelante(largo_lados)\n",
+    "        derecha(angulo_externo)\n",
+    "\n",
+    "\n",
+    "for x in range(5):\n",
+    "    circulo()\n",
+    "    adelante(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vimos en la unidad anterior que podemos utilizar `dibujar()` y `no_dibujar()` para dibujar una linea punteada:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "adelante(30)\n",
+    "no_dibujar()\n",
+    "\n",
+    "adelante(30)\n",
+    "dibujar()\n",
+    "\n",
+    "adelante(30)\n",
+    "no_dibujar()\n",
+    "\n",
+    "adelante(30)\n",
+    "dibujar()\n",
+    "\n",
+    "adelante(30)\n",
+    "no_dibujar()\n",
+    "\n",
+    "adelante(30)\n",
+    "dibujar()\n",
+    "\n",
+    "adelante(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora veamos como usar la instruccion `if` para poder repetir este patron. Utilizaremos una variable llamada z en el for para saber si esta es par o impar y si es par dibujamos y si no no."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "for z in range(5):\n",
+    "    if z % 2 == 0:\n",
+    "        dibujar()\n",
+    "    else:\n",
+    "        no_dibujar()\n",
+    "    adelante(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3 (extremadamente dificil): \n",
+    "\n",
+    "Utiliza dos `for` uno adentro de otro para crear el cuadrado con bordes de linea de puntos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribe tus instrucciones a continuacion\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -70,19 +319,20 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>Click aqui para ver la Solucion del Ejercicio 1</summary>\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 3</summary>\n",
     "<code>\n",
     "\n",
     "ir_a_casa()<br>\n",
     "borrar_todo()<br>\n",
-    "velocidad(6)<br>\n",
-    "izquierda(90)<br>\n",
     "<br>\n",
-    "for x in range(10):<br>\n",
-    "&nbsp;&nbsp;adelante(30)<br>\n",
+    "for x in range(4):<br>\n",
+    "&nbsp;&nbsp;for z in range(5):<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;if z % 2 == 0:<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dibujar()<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;else:<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;no_dibujar()<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;adelante(30)<br>\n",
     "&nbsp;&nbsp;derecha(90)<br>\n",
-    "&nbsp;&nbsp;adelante(30)<br>\n",
-    "&nbsp;&nbsp;izquierda(90)<br>\n",
     "\n",
     "</code>\n",
     "</details>"
