--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -72,10 +72,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "805f5e99-9e0d-43d0-9eb2-cb427c3401cd",
+   "id": "3d023cde-99b0-49ee-ac1a-5664b0fe1aaf",
    "metadata": {},
    "source": [
-    "- https://github.com/ResidentMario/missingno"
+    "# Funcion para ver los tipos de valores de cada columna con muestras aleatorias"
    ]
   },
   {
@@ -212,6 +212,22 @@
    ],
    "source": [
     "df.pipe(glimpse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10419418-8cf5-422b-a891-d77f94937320",
+   "metadata": {},
+   "source": [
+    "# Libreria para ver de forma grafica los valores faltantes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "805f5e99-9e0d-43d0-9eb2-cb427c3401cd",
+   "metadata": {},
+   "source": [
+    "- https://github.com/ResidentMario/missingno"
    ]
   },
   {
