--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -289,33 +289,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas.api.types import is_numeric_dtype\n",
+    "from pandas.api.types import is_numeric_dtype, is_float_dtype\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "def data_processing(df, target_col=\"target\"):\n",
-    "    # TODO: save data processing to replicate on test\n",
-    "    # Remove ID columns\n",
-    "    for c in df.columns:\n",
-    "        if not is_float_dtype(df[c]):\n",
-    "            if df[c].nunique() == len(df[c]):\n",
-    "                df = df.drop(c, axis=1)\n",
-    "    \n",
-    "    # Fill Missing Values and Scale\n",
-    "    scaler = StandardScaler()\n",
-    "    for c in df.columns:\n",
-    "        if c != target_col:\n",
-    "            if is_numeric_dtype(df[c]):\n",
-    "                df[c] = df[c].fillna(df[c].mean())\n",
-    "                df[c] = scaler.fit_transform(df[[c]])\n",
-    "            else:\n",
-    "                df[c] = df[c].fillna(df[c].mode())\n",
-    "                df = pd.get_dummies(df, columns=[c], drop_first=True, dtype=int)\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
+    "def data_processing(df, target_col=\"target\", id_col=None, ok_percentage_missing=0.3, max_unique_categories=20):\n",
+    "    \"\"\"\n",
+    "    Process the raw dataframe and convert to a dense vector\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # TODO: save data processing to replicate on test\n",
+    "    \n",
+    "    \n",
+    "    X = pd.DataFrame()\n",
+    "\n",
+    "    for c in df.columns:\n",
+    "        # if it is the id column skip the column:\n",
+    "        if id_col != None and c == id_col:\n",
+    "            continue\n",
+    "        # if it is the target the column skip the colum:\n",
+    "        if c == target_col:\n",
+    "            continue\n",
+    "        # if all values are unique skip the column:\n",
+    "        if not is_float_dtype(df[c]) and df[c].nunique() == len(df[c]):\n",
+    "            continue\n",
+    "        # if not numeric and more than max_unique_categories categories skip the column:\n",
+    "        if not is_numeric_dtype(df[c]) and df[c].nunique() > max_unique_categories:\n",
+    "            continue\n",
+    "        # if missing values are more than 30% skip the column:\n",
+    "        if df[c].isna().sum() / len(df[c]) > ok_percentage_missing:\n",
+    "            continue\n",
+    "        \n",
+    "        \n",
+    "        if is_numeric_dtype(df[c]):\n",
+    "            # Replace missing values with the mean\n",
+    "            col_imputer_value = df[c].mean()\n",
+    "            column_values = df[[c]].fillna(col_imputer_value)\n",
+    "            # Scale values\n",
+    "            scaler = StandardScaler()\n",
+    "            scaled_values = scaler.fit_transform(column_values)\n",
+    "            tmp_df = pd.DataFrame(scaled_values, columns=[c])\n",
+    "            X = pd.concat([X, tmp_df], axis=1)\n",
+    "        else:\n",
+    "            # Replace missing values with the mode\n",
+    "            col_imputer_value = df[c].mode()\n",
+    "            column_values = df[c].fillna(col_imputer_value)\n",
+    "\n",
+    "            # One-hot encode the categorical column\n",
+    "            encoder = OneHotEncoder(sparse_output=False, \n",
+    "                                    handle_unknown='ignore', \n",
+    "                                    feature_name_combiner=lambda feat,cat:f\"___{feat}_{cat}\")\n",
+    "            encoded_data = encoder.fit_transform(pd.DataFrame(column_values, columns=[c]))\n",
+    "            # Convert encoded data to DataFrame with new column names\n",
+    "            encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out([c]))\n",
+    "            X = pd.concat([X, encoded_df], axis=1)\n",
+    "    \n",
     "    # Identify the target column\n",
-    "    X_train = df.loc[:, df.columns != target_col]\n",
-    "    y_train = df.loc[:, target_col]\n",
-    "    return X_train, y_train"
+    "    y = df.loc[:, target_col]\n",
+    "\n",
+    "    return X, y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd7317b-2d6b-4117-832c-66417b3b5cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
