--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -356,7 +356,115 @@
    "id": "8dd7317b-2d6b-4117-832c-66417b3b5cb6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from pandas.api.types import is_numeric_dtype, is_float_dtype\n",
+    "\n",
+    "class Preprocessor():\n",
+    "    \"\"\"\n",
+    "    This class stores information about preprocessing steps applied to each column.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.original_columns = []\n",
+    "        self.transformations = {}  # Dictionary to store transformations per column name\n",
+    "\n",
+    "    def fit(self, df, target_col=\"target\", id_col=None, ok_percentage_missing=0.3, max_unique_categories=20):\n",
+    "        \"\"\"\n",
+    "        Fits transformations to the data based on column type (numeric or categorical).\n",
+    "\n",
+    "        Args:\n",
+    "          df: Pandas DataFrame containing the data.\n",
+    "        \"\"\"\n",
+    "        self.original_columns = list(df.columns)\n",
+    "        for c in df.columns:\n",
+    "            # if it is the id column skip the column:\n",
+    "            if id_col != None and c == id_col:\n",
+    "                self.transformations[c] = {'type': 'droped'}\n",
+    "                continue\n",
+    "            # if it is the target the column skip the colum:\n",
+    "            if c == target_col:\n",
+    "                self.transformations[c] = {'type': 'droped'}\n",
+    "                continue\n",
+    "            # if all values are unique skip the column:\n",
+    "            if not is_float_dtype(df[c]) and df[c].nunique() == len(df[c]):\n",
+    "                self.transformations[c] = {'type': 'droped'}\n",
+    "                continue\n",
+    "            # if not numeric and more than max_unique_categories categories skip the column:\n",
+    "            if not is_numeric_dtype(df[c]) and df[c].nunique() > max_unique_categories:\n",
+    "                self.transformations[c] = {'type': 'droped'}\n",
+    "                continue\n",
+    "            # if missing values are more than 30% skip the column:\n",
+    "            if df[c].isna().sum() / len(df[c]) > ok_percentage_missing:\n",
+    "                self.transformations[c] = {'type': 'droped'}\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "            if is_numeric_dtype(df[c]):\n",
+    "                # Replace missing values with the mean\n",
+    "                col_imputer_value = df[c].mean()\n",
+    "                column_values = df[[c]].fillna(col_imputer_value)\n",
+    "                # Scale values\n",
+    "                col_mean = col_imputer_value\n",
+    "                col_std = df[c].std()\n",
+    "                # Save column transformation info\n",
+    "                self.transformations[c] = {'type': 'StandardScaler', 'imputer_value':col_imputer_value, 'mean':col_mean, 'std':col_std}\n",
+    "            else:\n",
+    "                # Replace missing values with the mode\n",
+    "                col_imputer_value = str(df[c].mode().values[0])\n",
+    "                column_values = df[c].fillna(col_imputer_value)\n",
+    "                # One-hot encode the categorical column\n",
+    "                tmp_df = pd.get_dummies(df[c], prefix=f\"___{c}_\", dtype=int)\n",
+    "                fitted_columns = list(tmp_df.columns.values)\n",
+    "                # Save column transformation info\n",
+    "                self.transformations[c] = {'type': 'OneHotEncoder', 'imputer_value':col_imputer_value, 'fitted_columns':fitted_columns}\n",
+    "\n",
+    "    def transform(self, df):\n",
+    "        \"\"\"\n",
+    "        Transforms the data using the information stored about the transformations.\n",
+    "\n",
+    "        Args:\n",
+    "          df: Pandas DataFrame containing the data to be transformed.\n",
+    "\n",
+    "        Returns:\n",
+    "          Transformed Pandas DataFrame.\n",
+    "        \"\"\"\n",
+    "        if self.original_columns != list(df.columns.values):\n",
+    "            raise Exception('The columns are not the same of the previous uploaded dataset')\n",
+    "\n",
+    "        X = pd.DataFrame()\n",
+    "\n",
+    "        for c in df.columns:\n",
+    "            if self.transformations[c]['type'] == 'StandardScaler':\n",
+    "                # Replace missing values\n",
+    "                col_imputer_value = self.transformations[c]['imputer_value']\n",
+    "                column_values = df[[c]].fillna(col_imputer_value)\n",
+    "                # Scale values\n",
+    "                col_mean = self.transformations[c]['mean']\n",
+    "                col_std = self.transformations[c]['std']\n",
+    "                scaled_values = (df[c] - col_mean) / col_std \n",
+    "                tmp_df = pd.DataFrame(scaled_values, columns=[c])\n",
+    "                X = pd.concat([X, tmp_df], axis=1)\n",
+    "            elif self.transformations[c]['type'] == 'OneHotEncoder':\n",
+    "                # Replace missing values\n",
+    "                col_imputer_value = self.transformations[c]['imputer_value']\n",
+    "                column_values = df[c].fillna(col_imputer_value)\n",
+    "                # One-hot encode the categorical column\n",
+    "                fitted_columns = self.transformations[c]['fitted_columns']\n",
+    "                encoded_df = pd.get_dummies(df[c], prefix=f\"___{c}_\", dtype=int)\n",
+    "                encoded_df.reindex(columns=fitted_columns, fill_value=0)\n",
+    "                # Concat dataframe\n",
+    "                X = pd.concat([X, encoded_df], axis=1)\n",
+    "\n",
+    "        return X\n",
+    "\n",
+    "    def set_transformations_from_json(self, original_columns_json, transformations_json):\n",
+    "        \"\"\"\n",
+    "        Sets the original_columns and transformations dictionary based on the provided JSON string.\n",
+    "        \"\"\"\n",
+    "        self.original_columns = json.loads(original_columns_json)\n",
+    "        self.transformations = json.loads(transformations_json)"
+   ]
   },
   {
    "cell_type": "markdown",
