--- a/cursos/espanol/datascience/0__datasets.ipynb
+++ b/cursos/espanol/datascience/0__datasets.ipynb
@@ -92,6 +92,10 @@
     "- https://cds.climate.copernicus.eu/#!/search\n",
     "- https://ourworldindata.org/\n",
     "\n",
+    "## Datasets España\n",
+    "- https://datos.gob.es/es/catalogo\n",
+    "- https://datos.gob.es/es/catalogo/a07002862-registro-de-emergencias-del-112\n",
+    "\n",
     "## Buscador de datasets\n",
     "\n",
     "- https://www.sci2sci.com/"
