--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,38 +26,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c942790-592a-48f0-97c5-9f539d82af6f",
+   "id": "4672b724-d9e7-4612-bde4-6e77bf3f92a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Dibujo enviado por Brian {display-mode:\"form\"}\n",
-    "largo = 10\n",
-    "\n",
+    "#@title Dibujo enviado por Cecilia {display-mode:\"form\"}\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
-    "\n",
     "velocidad(6)\n",
-    "color(\"white\")\n",
+    "color(\"yellow\")\n",
     "\n",
-    "adelante(largo)\n",
+    "adelante(100)\n",
     "derecha(90)\n",
-    "adelante(largo)\n",
+    "adelante(100)\n",
     "derecha(90)\n",
-    "adelante(largo * 2)\n",
+    "adelante(100)\n",
     "derecha(90)\n",
-    "adelante(largo * 2)\n",
-    "derecha(90)\n",
-    "adelante(largo * 3)\n",
-    "derecha(90)\n",
-    "adelante(largo * 3)\n",
-    "derecha(90)\n",
-    "adelante(largo * 4)\n",
-    "derecha(90)\n",
-    "adelante(largo * 4)\n",
-    "derecha(90)\n",
-    "adelante(largo * 5)\n",
-    "derecha(90)\n",
-    "adelante(largo * 5)"
+    "adelante(100)\n",
+    "derecha(135)\n",
+    "adelante(140)\n",
+    "izquierda(-270)\n",
+    "adelante(70)\n",
+    "izquierda(270)\n",
+    "atras(70)\n",
+    "derecha(-270)\n",
+    "adelante(140)"
    ]
   },
   {
@@ -114,6 +107,43 @@
     "adelante(40)\n",
     "izquierda(90)\n",
     "adelante(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c942790-592a-48f0-97c5-9f539d82af6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Brian {display-mode:\"form\"}\n",
+    "largo = 10\n",
+    "\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "velocidad(6)\n",
+    "color(\"white\")\n",
+    "\n",
+    "adelante(largo)\n",
+    "derecha(90)\n",
+    "adelante(largo)\n",
+    "derecha(90)\n",
+    "adelante(largo * 2)\n",
+    "derecha(90)\n",
+    "adelante(largo * 2)\n",
+    "derecha(90)\n",
+    "adelante(largo * 3)\n",
+    "derecha(90)\n",
+    "adelante(largo * 3)\n",
+    "derecha(90)\n",
+    "adelante(largo * 4)\n",
+    "derecha(90)\n",
+    "adelante(largo * 4)\n",
+    "derecha(90)\n",
+    "adelante(largo * 5)\n",
+    "derecha(90)\n",
+    "adelante(largo * 5)"
    ]
   },
   {
@@ -200,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
