--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,6 +26,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98e146d3-5a8b-48f8-a742-625b773d5c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Iris {display-mode:\"form\"}\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "direccion(270)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(300)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(60)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(90)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(180)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(200)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(270)\n",
+    "adelante(70)\n",
+    "\n",
+    "direccion(300)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(3)\n",
+    "adelante(90)\n",
+    "\n",
+    "direccion(60)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(180)\n",
+    "adelante(100)\n",
+    "\n",
+    "direccion(187)\n",
+    "adelante(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4672b724-d9e7-4612-bde4-6e77bf3f92a8",
    "metadata": {},
    "outputs": [],
