--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,11 +26,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fdcafc53-df78-4517-b921-7c17acbc693c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Franco {display-mode:\"form\"}\n",
+    "\n",
+    "borrar_todo()\n",
+    "no_dibujar()\n",
+    "ocultar_tortuga()\n",
+    "ir_a_xy(0, 83.5)\n",
+    "color_de_fondo(\"#F2F2F2\")\n",
+    "dibujar()\n",
+    "velocidad(8)\n",
+    "ancho_linea(167)\n",
+    "color(\"#73B2D9\")\n",
+    "direccion (0)\n",
+    "adelante (800)\n",
+    "no_dibujar()\n",
+    "ir_a_xy(0, 415.5)\n",
+    "dibujar()\n",
+    "adelante (800)\n",
+    "no_dibujar()\n",
+    "ir_a_xy(400, 225)\n",
+    "color(\"#F2A30F\")\n",
+    "dibujar()\n",
+    "ancho_linea(25)\n",
+    "velocidad (13)\n",
+    "for i in range(0, 361, 10):\n",
+    "    ir_a_casa()\n",
+    "    direccion (i)\n",
+    "    adelante (40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "98e146d3-5a8b-48f8-a742-625b773d5c6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Iris {display-mode:\"form\"}\n",
+    "\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "\n",
@@ -79,6 +116,7 @@
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Cecilia {display-mode:\"form\"}\n",
+    "\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "velocidad(6)\n",
@@ -109,6 +147,7 @@
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Teo {display-mode:\"form\"}\n",
+    "\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "dibujar()\n",
@@ -165,6 +204,7 @@
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Brian {display-mode:\"form\"}\n",
+    "\n",
     "largo = 10\n",
     "\n",
     "ir_a_casa()\n",
@@ -202,6 +242,7 @@
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Flor {display-mode:\"form\"}\n",
+    "\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "dibujar()\n",
@@ -239,6 +280,7 @@
    "outputs": [],
    "source": [
     "#@title Dibujo enviado por Hernan {display-mode:\"form\"}\n",
+    "\n",
     "ir_a_casa()\n",
     "borrar_todo()\n",
     "dibujar()\n",
