--- a/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
+++ b/cursos/espanol/programacion_basico/X_salon_del_arte.ipynb
@@ -26,6 +26,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b334a91-3c46-4f06-af8a-c557a4db1913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Dibujo enviado por Lenin {display-mode:\"form\"}\n",
+    "\n",
+    "ir_a_casa()\n",
+    "borrar_todo()\n",
+    "\n",
+    "\n",
+    "velocidad(5)\n",
+    "ancho_linea(5)\n",
+    "adelante(100)\n",
+    "no_dibujar()\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "izquierda(90)\n",
+    "adelante(100)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "derecha(90)\n",
+    "adelante(50)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "derecha(90)\n",
+    "adelante(250)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "izquierda(-90)\n",
+    "adelante(50)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "izquierda(-90)\n",
+    "adelante(100)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "izquierda(90)\n",
+    "adelante(100)\n",
+    "\n",
+    "girar = dibujar()\n",
+    "girar\n",
+    "derecha(90)\n",
+    "adelante(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fdcafc53-df78-4517-b921-7c17acbc693c",
    "metadata": {},
    "outputs": [],
