Added units to Programacion Basico

--- a/cursos/espanol/programacion_basico/6_mas_patrones.ipynb
+++ b/cursos/espanol/programacion_basico/6_mas_patrones.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mas Patrones"
+    "# Mas Patrones (unidad opcional extremadamente dificil)"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
